--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>AniMate Login</title>
+        <title>AniMate: Login</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -13,15 +13,15 @@
     </head>
     
     <body>
-        <div class="row d-flex justify-content-center">
+        <div class="loginbox d-flex justify-content-center">
             <div class="col-md-2 col-xs-12">
                 <img src="assets/avatar.svg" class="avatar">
                 <h1>Login Here</h1>
                 <form>
                     <p>Username</p>
-                    <input type="text" name="username" placeholder="">
+                    <input type="text" name="username" placeholder="Enter Username">
                     <p>Password</p>
-                    <input type="text" name="password" placeholder="">
+                    <input type="password" name="password" placeholder="Enter Password">
                     <input type="Submit" name="" placeholder="Login">
                     <a href="">Forgotten Password?</a><br>
                     <a href="">Don't have an account?</a>
