Finalised login page with card.

--- a/home.html
+++ b/home.html
@@ -35,29 +35,13 @@
       </div>
     </nav>
 
-    <section class="place" id="work">
-      <h2 class="text-center display-3 animated fadeIn">Your Calendar</h2>
-      <div class="row mt-5">
-        <div class="col-lg-2">
-        </div>
-        <div class="col-sm-12 col-lg-3">
-          <h1>Digital Culture</h1>
-          <p>My work on Digital Culture includes a video exploring the history of Virtual Reality and an audio work exploring the shift from analogue to digital. 
-            These pieces were created to test my video and audio editing abilities.
-            The video covers the origin of VR and early forms of immersion and then progresses into more recent ventures into this emerging media format. 
-            The audio impersonates the feel of a vinyl record being played and toys with the idea of tricking the listener.
-          </p>
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/556656354&color=%23e3ddab&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
-          </iframe>
-        </div>
-        <div class="col-sm-12 col-lg-5">
-          <div  class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uPMBng3ztmM"></iframe>
-          </div>
-        </div>
-        <div class="col-lg-2">
-        </div>
-      </div>
+    <section class="place overfillno" id="calendar">
+    </section>
+
+    <section class="place overfillno" id="pets">
+    </section>
+
+    <section class="place overfillno" id="profile">
     </section>
 
     <script src="js/jquery.min.js"></script>
