--- a/login.html
+++ b/login.html
@@ -13,19 +13,21 @@
     </head>
     
     <body>
-        <div class="loginbox d-flex justify-content-center">
-            <div class="col-md-2 col-xs-12">
-                <img src="assets/avatar.svg" class="avatar">
-                <h1>Login Here</h1>
-                <form>
-                    <p>Username</p>
-                    <input type="text" name="username" placeholder="Enter Username">
-                    <p>Password</p>
-                    <input type="password" name="password" placeholder="Enter Password">
-                    <input type="Submit" name="" placeholder="Login">
-                    <a href="">Forgotten Password?</a><br>
-                    <a href="">Don't have an account?</a>
-                </form>
+        <div class="loginspace">
+            <div class="row loginbox overfillno d-flex justify-content-center">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 carded">
+                    <img src="assets/avatar.svg" class="avatar">
+                    <h2>AniMate Login</h2>
+                    <form>
+                        <p>Username</p>
+                        <input type="text" name="username" placeholder="Enter Username">
+                        <p>Password</p>
+                        <input type="password" name="password" placeholder="Enter Password">
+                        <input type="Submit" name="" placeholder="Login"><br>
+                        <a href="home.html">Forgotten Password?</a><br>
+                        <a href="">Don't have an account?</a>
+                    </form>
+                </div>
             </div>
         </div>
     
