Added account creation screen and changed logo.

--- a/create.html
+++ b/create.html
@@ -17,15 +17,18 @@
             <div class="row loginbox overfillno d-flex justify-content-center">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 carded">
                     <img src="assets/avatar.svg" class="avatar">
-                    <h2>AniMate Login</h2>
+                    <h2>Create Account</h2>
                     <form>
+                        <p>Email</p>
+                        <input type="text" name="email" placeholder="Enter Email">
                         <p>Username</p>
                         <input type="text" name="username" placeholder="Enter Username">
                         <p>Password</p>
                         <input type="password" name="password" placeholder="Enter Password">
+                        <p>Confirm Password</p>
+                        <input type="password" name="password" placeholder="Enter Password">
                         <input type="Submit" name="" placeholder="Login"><br>
-                        <a href="home.html">Forgotten Password?</a><br>
-                        <a href="create.html">Don't have an account?</a>
+                        <a href="login.htmlwd">Already have an account?</a>
                     </form>
                 </div>
             </div>
