--- a/create.html
+++ b/create.html
@@ -28,7 +28,7 @@
                         <p>Confirm Password</p>
                         <input type="password" name="password" placeholder="Enter Password">
                         <input type="Submit" name="" placeholder="Login"><br>
-                        <a href="login.htmlwd">Already have an account?</a>
+                        <a href="login.html">Already have an account?</a>
                     </form>
                 </div>
             </div>
