--- a/home.html
+++ b/home.html
@@ -13,43 +13,55 @@
   </head>
 
   <body id="nav">
-    <div class="container">
-      <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: rgb(255, 255, 255);">
-        <a href="">
-          <img src="assets/animateLogo.svg" class="branding">
-        </a>
-        <button class="navbar-toggler ml-auto text-uppercase text-white rounded" style="background-color: #720429;" data-toggle="collapse" data-target="#mobileMenu">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="mobileMenu">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#calendar">Calendar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pets">Pets</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#profile">Profile</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+        <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: rgb(255, 255, 255);">
+          <a href="">
+            <img src="assets/animateIcon.svg" class="navbar-brand branding">
+          </a>
+          <button class="navbar-toggler text-uppercase text-white rounded" style="background-color: #720429;" data-toggle="collapse" data-target="#mobileMenu">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="mobileMenu">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#calendar">Calendar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pets">Pets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#profile">Profile</a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Login</a></li>
+              <li class= "nav-item">
+                <a class="nav-link disabled">or</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="create.html">Sign up</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-    <section class="place" id="calendar">
+    <section id="calendar">
       <div class="row overfillno">
-        <h2>Calendar</h2>
+        <div class="col-2"></div>
+        <div class="col-8">
+          <h2>Calendar</h2>
+        </div>
+        <div class="col-2"></div>
       </div>
     </section>
 
-    <section class="place overfillno" id="pets">
+    <section id="pets">
       <div class="row overfillno">
         <h2>Pets</h2>
       </div>
     </section>
 
-    <section class="place overfillno" id="profile">
+    <section id="profile">
       <div class="row overfillno">
         <h2>Profile</h2>
       </div>
