--- a/home.html
+++ b/home.html
@@ -13,57 +13,100 @@
   </head>
 
   <body id="nav">
-        <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: rgb(255, 255, 255);">
-          <a href="">
-            <img src="assets/animateIcon.svg" class="navbar-brand branding">
-          </a>
-          <button class="navbar-toggler text-uppercase text-white rounded" style="background-color: #720429;" data-toggle="collapse" data-target="#mobileMenu">
-            <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="mobileMenu">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#calendar">Calendar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pets">Pets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#profile">Profile</a>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a></li>
-              <li class= "nav-item">
-                <a class="nav-link disabled">or</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="create.html">Sign up</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: white;">
+      <div class="col-md-1"></div>
+        <a href="">
+          <img src="assets/animateIcon.svg" class="navbar-brand branding">
+        </a>
+        <button class="navbar-toggler text-uppercase text-white rounded" style="background-color: #720429;" data-toggle="collapse" data-target="#mobileMenu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="mobileMenu">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#calendar">Calendar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pets">Pets</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#profile">Profile</a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a></li>
+            <li class= "nav-item">
+              <a class="nav-link disabled">or</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="create.html">Sign up</a>
+            </li>
+          </ul>
+        </div>
+      <div class="col-md-1"></div>
+    </nav>
+
+    <section id="head">
+      <img src="assets/animateHead.png">
+    </section>
 
     <section id="calendar">
       <div class="row overfillno">
-        <div class="col-2"></div>
-        <div class="col-8">
+        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center">
           <h2>Calendar</h2>
         </div>
-        <div class="col-2"></div>
+      </div>
+      <div class="row loginbox overfillno">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
+          <img src="assets/avatar.svg" class="avatar">
+          <h2>Add Pet</h2>
+          <form>
+            <p>Name</p>
+            <input type="text" name="name" placeholder="Enter Name">
+            <p>Age</p>
+            <input type="text" name="age" placeholder="Enter Age">
+            <input type="Submit" name="" placeholder="Login"><br>
+            <a href="home.html">Forgotten Password?</a><br>
+            <a href="create.html">Don't have an account?</a>
+          </form>
+        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
+          <img src="assets/avatar.svg" class="avatar">
+          <h2>Pet</h2>
+          <form>
+              <p>Username</p>
+              <input type="text" name="username" placeholder="Enter Username">
+              <p>Password</p>
+              <input type="password" name="password" placeholder="Enter Password">
+              <input type="Submit" name="" placeholder="Login"><br>
+              <a href="home.html">Forgotten Password?</a><br>
+              <a href="create.html">Don't have an account?</a>
+          </form>
+        </div>
+        <div class="col-lg-1"></div>
       </div>
     </section>
 
     <section id="pets">
       <div class="row overfillno">
-        <h2>Pets</h2>
+        <div class="col-2"></div>
+        <div class="col-8">
+          <h2>Pets</h2>
+        </div>
+        <div class="col-2"></div>
       </div>
     </section>
 
     <section id="profile">
       <div class="row overfillno">
-        <h2>Profile</h2>
+        <div class="col-2"></div>
+        <div class="col-8">
+          <h2>Profile</h2>
+        </div>
+        <div class="col-2"></div>
       </div>
     </section>
 
