--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     
-    <body>
+    <body class="bGround">
         <div class="loginspace">
             <div class="row loginbox overfillno d-flex justify-content-center">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 carded">
